--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,610 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+header {
+  background-color: #fff;
+  height: 90px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 0px 20px;
+  -webkit-box-shadow: 0px 5px 5px #e7e7e7;
+          box-shadow: 0px 5px 5px #e7e7e7;
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  -webkit-animation: slideDown 0.2s ease-out;
+          animation: slideDown 0.2s ease-out;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header .menu-toggler {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
+
+header .menu-toggler .icon-justify {
+  height: 20px;
+  width: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  cursor: pointer;
+}
+
+header .menu-toggler .icon-justify > div {
+  height: 3px;
+  width: 100%;
+  background: #000;
+}
+
+header .menu-toggler .icon-justify div:nth-of-type(1) {
+  width: 40% !important;
+  border-radius: 2px;
+}
+
+header .menu-toggler .icon-justify div:nth-of-type(2) {
+  width: 100% !important;
+  border-radius: 2px;
+  height: 3px !important;
+}
+
+header .menu-toggler .icon-justify div:nth-of-type(3) {
+  width: 70% !important;
+  border-radius: 2px;
+}
+
+header .search-bar {
+  max-width: 500px;
+  width: 100%;
+  position: relative;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+header .search-bar .search-icon {
+  position: absolute;
+  top: 55%;
+  left: 10px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  font-size: 18px;
+  color: #4d4d4d;
+  font-weight: 100 !important;
+}
+
+header .search-bar input {
+  height: 45px;
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  padding-left: 38px;
+  color: #474747;
+  outline: none;
+}
+
+header nav {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+header nav .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+header nav .nav-links .nav-link {
+  list-style: none;
+  margin: 5px 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.cart-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(26, 26, 26, 0.5);
+  z-index: 999999;
+}
+
+.cart-container .cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 400px;
+  background: #fff;
+  padding: 20px;
+}
+
+.cart-container .cart .cart-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.cart-container .cart .cart-header h3 {
+  font-size: 25px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.cart-container .cart .cart-header .cross {
+  font-size: 25px;
+  text-align: right;
+  cursor: pointer;
+  padding: 4px;
+}
+
+.cart-container .cart .cart-items {
+  width: 100%;
+}
+
+.cart-container .cart .cart-items .cart-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 150px;
+  border-bottom: 1px solid #c7c7c7;
+  position: relative;
+}
+
+.cart-container .cart .cart-items .cart-item .price-bold {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  font-size: 20px;
+  color: #000;
+  font-weight: 500;
+}
+
+.cart-container .cart .cart-items .cart-item img {
+  width: 100px;
+}
+
+.cart-container .cart .cart-items .cart-item .cart-details {
+  color: #616161;
+  font-size: 14px;
+}
+
+.cart-container .cart .cart-items .cart-item .cart-details button {
+  border: none;
+  outline: none;
+  max-width: 110px;
+  width: 100%;
+  height: 30px;
+  background: #000;
+  color: #fff;
+  border-radius: 5px;
+  margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 0px 10px;
+}
+
+.cart-container .cart .cart-items .cart-item .cart-details button p {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@-webkit-keyframes slideDown {
+  from {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes slideDown {
+  from {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+.sidebar {
+  background: #fff;
+  width: 300px;
+  position: fixed;
+  height: 100%;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  top: 90px;
+  padding: 20px 0px;
+}
+
+.sidebar .side-nav-links {
+  width: 100%;
+}
+
+.sidebar .side-nav-links .side-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 18px 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+}
+
+.sidebar .side-nav-links .side-link:hover {
+  background: #efefef;
+}
+
+.sidebar .side-nav-links .side-link > i {
+  width: 40px;
+}
+
+.sidebar .side-nav-links .side-link .side-link-title {
+  -webkit-box-flex: 2 !important;
+      -ms-flex: 2 !important;
+          flex: 2 !important;
+}
+
+.sidebar .side-nav-links .side-link .arrow {
+  font-size: 20px;
+  color: grey;
+}
+
+.sidebar .side-nav-links .active {
+  background: #efefef;
+}
+
+main {
+  margin-top: 90px;
+  margin-left: 300px;
+  padding: 10px;
+}
+
+main .products-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-animation: blur 0.6s ease-out;
+          animation: blur 0.6s ease-out;
+}
+
+main .products-list .products {
+  height: 400px;
+  width: 218px;
+  padding: 10px;
+  background: #fff;
+  margin: 10px;
+  border-radius: 5px;
+  cursor: default;
+}
+
+main .products-list .products .product-img {
+  width: 100%;
+  height: 180px;
+}
+
+main .products-list .products .product-img img {
+  width: 100%;
+  height: 100%;
+}
+
+main .products-list .products .product-price {
+  font-size: 18px;
+  color: #000;
+  font-weight: 600;
+  margin: 40px 10px 10px 10px;
+}
+
+main .products-list .products .product-title {
+  font-size: 14px;
+  color: grey;
+  margin: 10px 10px 20px 10px;
+}
+
+main .products-list .products .add-btn {
+  border: none;
+  background: #efefef;
+  width: 85%;
+  display: block;
+  margin-top: 30px !important;
+  margin: auto;
+  border-radius: 5px;
+  text-align: center;
+  outline: none;
+  height: 40px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+main .products-list .products .add-btn:hover {
+  background: #e2e2e2;
+}
+
+main .products-list .products .add-btn .plus {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 40px;
+  background: #e2e2e2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 21px;
+  color: gray;
+}
+
+@-webkit-keyframes blur {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes blur {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background: #f7f7f7;
+  color: #000;
+  font-family: "Poppins", sans-serif;
+}
+
+.loading-section {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #fff none repeat scroll 0% 0%;
+}
+
+.loader i {
+  font-size: 40px;
+  color: #000;
+}
+
+.loader {
+  height: 70px;
+  width: 70px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.border {
+  border: 4px solid #000;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  border-radius: 3px;
+  top: 0;
+  left: 0;
+  -webkit-animation: rotate 1s ease forwards infinite;
+          animation: rotate 1s ease forwards infinite;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+/* FADE IN FADE OUT */
+.slidein-slideout-appear {
+  opacity: 0;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.slidein-slideout-appear-active {
+  opacity: 1;
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, transform 250ms;
+  transition: opacity 250ms, transform 250ms, -webkit-transform 250ms;
+}
+
+.slidein-slideout-enter {
+  opacity: 0;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.slidein-slideout-enter-active {
+  opacity: 1;
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, transform 250ms;
+  transition: opacity 250ms, transform 250ms, -webkit-transform 250ms;
+}
+
+.slidein-slideout-exit {
+  opacity: 1;
+}
+
+.slidein-slideout-exit-active {
+  opacity: 0;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, -webkit-transform 250ms;
+  transition: opacity 250ms, transform 250ms;
+  transition: opacity 250ms, transform 250ms, -webkit-transform 250ms;
+}
+
+.slidein-slideout-exit-done {
+  opacity: 0;
+}
+
+/* */
+/*# sourceMappingURL=index.css.map */
